sre-task/kyverno/policies/require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
    name: require-labels
spec:
    validationFailureAction: Enforce
    background: true
    rules:
        - name: check-for-team-label
          match:
              any:
                  - resources:
                        kinds:
                            - Pod
          validate:
              message: "Label 'team' is required"
              pattern:
                  metadata:
                      labels:
                          team: "?*"
